# terrain-server

./: CMakeLists.txt  README.md  package.xml
.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover  tmpFile
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.cmastalli-macbookair_580/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.cmastalli-macbookair_580/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.cmastalli-macbookair_580/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
config/: footstep_hierarchical_planner.yaml  hierarchical_planner.yaml  reward_map.yaml
config/footstep_hierarchical_planner/: gap.yaml  pallet.yaml
config/hierarchical_planner/: default.yaml  gap.yaml  pallet.yaml  stepping_stones.yaml
config/hyq/: body_motor_primitives.yaml  properties.yaml
dwl-ros-pkgs/dwl_terrain/: CMakeLists.txt  package.xml
dwl-ros-pkgs/dwl_terrain/config/: obstacle_map.yaml  reward_map.yaml  terrain_map.yaml
dwl-ros-pkgs/dwl_terrain/include/dwl_terrain/: DefaultFlatTerrain.h  ObstacleMapServer.h  RewardMapServer.h  RewardMapSubscriber.h  TerrainMapInterface.h  TerrainMapServer.h  TerrainMapSubscriber.h
dwl-ros-pkgs/dwl_terrain/include/terrain_server/: DefaultFlatTerrain.h
dwl-ros-pkgs/dwl_terrain/launch/: flat_terrain.launch  gap.launch  gap15cm.launch  gap25cm.launch  gap35cm.launch  obstacle_server.launch  octomap_server.launch  reward_server.launch  stairs.launch  stepping_stones.launch  terrain_server.launch
dwl-ros-pkgs/dwl_terrain/launch/gap/: gap15.launch  gap15_u14.launch  gap25.launch
dwl-ros-pkgs/dwl_terrain/launch/stair/: stair_s2_h14_l20.launch  stair_s2_h14_l30.launch  stair_s3_h14_l20.launch
dwl-ros-pkgs/dwl_terrain/msg/: TerrainCell.msg  TerrainMap.msg
dwl-ros-pkgs/dwl_terrain/src/: DefaultFlatTerrain.cpp  ObstacleMapServer.cpp  RewardMapServer.cpp  RewardMapSubscriber.cpp  TerrainMapInterface.cpp  TerrainMapServer.cpp  TerrainMapSubscriber.cpp
dwl-ros-pkgs/dwl_terrain/srv/: TerrainData.srv
dwl_planners/: CMakeLists.txt  package.xml
dwl_planners/config/: constrained_whole_body_planner.yaml  mode_invariant_whole_body_planner.yaml
dwl_planners/config/footstep_hierarchical_planner/: default.yaml  stepping_stones.yaml
dwl_planners/include/dwl_planners/: ConstrainedWholeBodyPlanner.h  DynamicWholeBodyPlanner.h  FootstepHierarchicalPlanner.h  ModeInvariantWholeBodyPlanner.h
dwl_planners/launch/: footstep_hierarchical_planner.launch  mode_invariant_whole_body_planner.launch
dwl_planners/src/: ConstrainedWholeBodyPlanner.cpp  DynamicWholeBodyPlanner.cpp  FootstepHierarchicalPlanner.cpp  ModeInvariantWholeBodyPlanner.cpp
include/dwl_terrain/: DefaultFlatTerrain.h  ObstacleMapServer.h  TerrainMapServer.h
include/terrain_server/: DefaultFlatTerrain.h  ObstacleMapServer.h  TerrainMapInterface.h  TerrainMapServer.h  TerrainMapping.h
include/terrain_server/feature/: CurvatureFeature.h  HeightDeviationFeature.h  SlopeFeature.h
launch/: constrained_whole_body_planner.launch  flat_terrain.launch  hierarchical_planner.launch  hyq_octomap_server.launch  long_stairs.launch  obstacle_map.launch  obstacle_server.launch  octomap_server.launch  pallet.launch  reward_server.launch  rviz_hierarchical_planning.launch  step_pallets.launch  stepping_stones.launch  terrain_server.launch
launch/gap/: gap15.launch  gap15_d14.launch  gap15_u14.launch  gap25.launch  gap25_d14.launch  gap25_u14.launch  gap35.launch  gap35_d14.launch  gap35_u14.launch
launch/stair/: stair_s2_h14_l20.launch  stair_s2_h14_l30.launch  stair_s3_h14_l20.launch  stair_s3_h14_l30.launch
msg/: TerrainCell.msg
src/: DefaultFlatTerrain.cpp  ObstacleMapServer.cpp  TerrainMapInterface.cpp  TerrainMapServer.cpp  TerrainMapping.cpp  WholeBodyPlanner.cpp
src/feature/: CurvatureFeature.cpp  HeightDeviationFeature.cpp  SlopeFeature.cpp
