<?xml version="1.0"?>
<package>
  <name>terrain_server</name>
  <version>0.0.5</version>
  <description> Terrain mapping algorithm for motion planning and control in legged locomotion</description>

  <author email="carlos.mastalli@laas.fr">Carlos Mastalli</author>
  <maintainer email="carlos.mastalli@laas.fr">Carlos Mastalli</maintainer>
  <license> BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>dwl</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dwl_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
    
  <run_depend>roscpp</run_depend>
  <run_depend>dwl</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dwl_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
</package>
